<resources>
    <string name="app_name">AndroidMovieViewer</string>

    <string name="search_keyword_label">Keyword:</string>
    <string name="search_title_label">Title:</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>

    <string name="search_button">Search</string>
    <string name="settings_button">Settings</string>
    <string name="login_button">Login</string>
    <string name="reset_button">Reset</string>
    <string name="select_button">Select</string>
    <string name="prev_page_button">Previous Page</string>
    <string name="next_page_button">Next Page</string>
</resources>
