<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_keyword_label"
            android:id="@+id/searchLbl" android:layout_gravity="center_horizontal" android:layout_weight="0.05"
            android:textSize="30dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchText" android:inputType="text"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="65dp" android:foregroundGravity="center_horizontal">
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:id="@+id/search_call_button"
                android:layout_weight="0.05"
                android:clickable="true"
                android:onClick="searchForMovie" android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true" android:layout_alignParentStart="true"
                android:layout_marginLeft="99dp" android:layout_marginStart="99dp"
                android:layout_centerHorizontal="true"/>
        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_button"
                android:id="@+id/reset_button"
                android:layout_gravity="right"
                android:layout_weight="0.05" android:layout_alignBottom="@+id/search_call_button"
                android:layout_toRightOf="@+id/search_call_button" android:layout_toEndOf="@+id/search_call_button"
                android:clickable="true" android:onClick="clearInputFields"
        />
    </RelativeLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/responseTextView"/>
</LinearLayout>