<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username_label"
                    android:id="@+id/username_label"
                    android:layout_weight="30"
                    android:layout_gravity="center"
                    android:textSize="24dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameInput"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="70"
                    android:textSize="24dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100">
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/password_label"
                    android:id="@+id/password_label"
                    android:layout_weight="30"
                    android:layout_gravity="center"
                    android:textSize="24dp"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passwordInput"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="70"
                    android:textSize="24dp"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="100">
            <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:id="@+id/login_button_login_screen"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="100"/>
        </TableRow>
    </TableLayout>
</LinearLayout>